->repaired and improved comprehensibility

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1233,6 +1233,7 @@ person.show.rolePubTab                 = Advision / Revision
 person.show.saveButton                 = Save
 person.show.supervisor                 = Supervisor
 person.show.thatsMeButton              = That's me
+person.show.thatsMeLabel               = User
 person.show.thatsNotMeButton           = That's not me
 person.show.thesis                     = Thesis
 
