--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -378,6 +378,7 @@ didyouknow.scanningQr      = <p>Ihre Webcam kann die Barcodes Ihrer B\u00FCcher 
 
 disambiguation.addPersonButton            = Person hinzuf\u00FCgen
 disambiguation.close                      = Schlie\u00DFen
+disambiguation.fromPost                   = Aus dem Eintrag
 disambiguation.header                     = Disambiguierung
 disambiguation.linkJustShowPerson         = Nur Person anzeigen
 disambiguation.linkPersonButton           = Person hinzuf\u00FCgen
@@ -385,14 +386,20 @@ disambiguation.modalLinkPersonCloseButton = Abbrechen
 disambiguation.modalLinkPersonContent     = Wollen Sie den folgenden Personennamen mit dieser Publikation assoziieren?
 disambiguation.modalLinkPersonHeader      = Personennamen-Assoziation
 disambiguation.modalNewPersonCloseButton  = Schlie\u00DFen
-disambiguation.modalNewPersonContent      = Diese Action wird Sie zu einer neuen Seite weiterleiten, wo Sie eine neue Person mit dem aktuellen Namen voreingetragen anlegen k\u00F6nnen.
+disambiguation.modalNewPersonContent      = Möchten Sie eine weitere Person mit dem aktuellen Namen anlegen?
 disambiguation.modalNewPersonHeader       = Neue Person zur Abschlussarbeit hinzuf\u00FCgen
 disambiguation.modalSearchPersonHeader    = Andere Person zur Abschlussarbeit hinzuf\u00FCgen
-disambiguation.newPersonButton            = Neue Person
+disambiguation.noInfo                     = keine weiteren Infos
+disambiguation.otherPerson                = eine andere Person
+disambiguation.otherPerson.modal.msg      = Sie k\u00F6nnen eine Person unter einem anderen Namen (Alias oder fr\u00FCherer Name) suchen, oder eine neue differenzierte Person unter dem Namen "{0}" im System anlegen.
+disambiguation.otherPerson.modal.newPersonButton = Neue Person anlegen
+disambiguation.otherPerson.modal.selectPersonButton = Person ausw\u00E4hlen
+disambiguation.otherPerson.modal.abortButton = Abbrechen
 disambiguation.noFound                    = Keine Personen zu dem Authornamen gefunden
 disambiguation.otherPersonButton          = Andere Person
 disambiguation.person                     = Person
 disambiguation.personsPanelHeader         = Personen mit dem Namen
+disambiguation.pleaseChooseMsg            = Bitte w\u00E4hlen Sie die zum Eintrag geh\u00F6rige Person:
 disambiguation.postPanelHeader            = Betreffenden Post
 disambiguation.searchPersonButton         = Nach anderen Namen suchen
 
@@ -1204,20 +1211,20 @@ person.show.addRoleButton              = Rolle hinzuf\u00FCgen
 person.show.addThesisButton            = Abschlussarbeit hinzuf\u00FCgen
 person.show.advisor                    = Betreuer
 person.show.authorOf                   = Author von
-person.show.close                      = Schlie\u00DFen
+person.show.close                      = Abbrechen
 person.show.deleteNameButton           = Namen entfernen
-person.show.deleteRoleButton           = Rolle l\u00F6schen
+person.show.deleteRoleButton           = Aufheben
 person.show.editRoleButton             = Rollen \u00E4ndern
 person.show.firstReviewer              = Erstgutachter
 person.show.formFirstName              = Vorname
 person.show.formLastName               = Nachname
 person.show.header                     = Person
 person.show.modalAddNameHeader         = Alternative Name zur Person hinzuf\u00FCgen
-person.show.modalAddRoleHeader         = Neue Rolle zur Abschlussarbeit hinzuf\u00FCgen
+person.show.modalAddRoleHeader         = Neue Rolle hinzuf\u00FCgen
 person.show.modalAddThesisHeader       = Neue Abschlussarbeit zur Person hinzuf\u00FCgen
-person.show.modalDeleteNameContent     = Wollen sie wirklich den folgenden Namen entfernen
+person.show.modalDeleteNameContent     = Wollen sie den gew\u00E4hlten Namen wirklich entfernen?
 person.show.modalDeleteNameHeader      = Namen zur Person entfernen
-person.show.modalDeleteRoleContent     = Wollen Sie wirklich die folgende Personenrolle entferne?
+person.show.modalDeleteRoleContent     = Wollen Sie die Personenzuordnung wirklich aufheben?
 person.show.modalDeleteRoleHeader      = Personenrolle der Abschlussarbeit entfernen
 person.show.modalEditRoleHeader        = Rollen der Person bearbeiten
 person.show.modalLinkPersonContent     = Wollen Sie Ihren Benutzer-Account mit dieser Person verkn\u00FCpfen?
@@ -1232,16 +1239,16 @@ person.show.other                      = Sonstige
 person.show.otherReviewer              = Andere Gutachter
 person.show.ownPubTab                  = Eigene Abschlussarbeiten
 person.show.person                     = Person
-person.show.personAlternateNames       = Alternative names
+person.show.personAlternateNames       = Alternative Namen
 person.show.personAlternateNamesSelect = (Hauptnamen ausw\u00E4hlen)
 person.show.personPanelHeader          = Infos
 person.show.resourcesPanelHeader       = Resourcen
 person.show.role                       = Rolle
-person.show.rolePubTab                 = Betreuung / Gegutachtung
+person.show.rolePubTab                 = Betreuung / Begutachtung
 person.show.saveButton                 = Speichern
 person.show.supervisor                 = Doktorvater
-person.show.thatsMeButton              = Das bin ich 
-person.show.thatsNotMeButton           = Das bin ich nicht
+person.show.thatsMeButton              = Das bin ich
+person.show.thatsMeLabel               = Benutzer
 person.show.thesis                     = Abschlussarbeit
 
 personalize = Zeige personalisierte Eintr\u00E4ge 
