--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -381,25 +381,30 @@ disambiguation.close                      = Schlie\u00DFen
 disambiguation.fromPost                   = Aus dem Eintrag
 disambiguation.header                     = Disambiguierung
 disambiguation.linkJustShowPerson         = Nur Person anzeigen
-disambiguation.linkPersonButton           = Person hinzuf\u00FCgen
-disambiguation.modalLinkPersonCloseButton = Abbrechen
-disambiguation.modalLinkPersonContent     = Wollen Sie den folgenden Personennamen mit dieser Publikation assoziieren?
-disambiguation.modalLinkPersonHeader      = Personennamen-Assoziation
+disambiguation.linkPersonButton           = Person hinzuf\u00FCgen 
+disambiguation.link.modal.msg             = Ihre Auswahl der zur Publikation geh\u00F6rigen Person kann im System gespeichert werden, sodas andere diese Auswahl nicht erneut treffen m\u00FCssen. M\u00F6chten Sie Ihre Auswahl speichern?
+disambiguation.link.modal.title           = Helfen Sie mit Ihrer Auswahl unserer Nutzergemeinschaft
+disambiguation.link.modal.abortButton     = Abbrechen
+disambiguation.link.modal.saveButton      = Ja, Speichern
+disambiguation.link.modal.viewButton      = Nein, Person nur zeigen
 disambiguation.modalNewPersonCloseButton  = Schlie\u00DFen
 disambiguation.modalNewPersonContent      = Möchten Sie eine weitere Person mit dem aktuellen Namen anlegen?
 disambiguation.modalNewPersonHeader       = Neue Person zur Abschlussarbeit hinzuf\u00FCgen
 disambiguation.modalSearchPersonHeader    = Andere Person zur Abschlussarbeit hinzuf\u00FCgen
 disambiguation.noInfo                     = keine weiteren Infos
 disambiguation.otherPerson                = eine andere Person
+disambiguation.otherPerson.modal.title    = Eine andere Person ausw\u00E4hlen oder anlegen
 disambiguation.otherPerson.modal.msg      = Sie k\u00F6nnen eine Person unter einem anderen Namen (Alias oder fr\u00FCherer Name) suchen, oder eine neue differenzierte Person unter dem Namen "{0}" im System anlegen.
 disambiguation.otherPerson.modal.newPersonButton = Neue Person anlegen
+disambiguation.otherPerson.modal.search.placeholder = Person suchen...
 disambiguation.otherPerson.modal.selectPersonButton = Person ausw\u00E4hlen
 disambiguation.otherPerson.modal.abortButton = Abbrechen
 disambiguation.noFound                    = Keine Personen zu dem Authornamen gefunden
 disambiguation.otherPersonButton          = Andere Person
 disambiguation.person                     = Person
 disambiguation.personsPanelHeader         = Personen mit dem Namen
-disambiguation.pleaseChooseMsg            = Bitte w\u00E4hlen Sie die zum Eintrag geh\u00F6rige Person:
+disambiguation.pleaseChooseMsg            = Bitte w\u00E4hlen Sie die zum Eintrag geh\u00F6rige Person namens "{0}":
+disambiguation.listExplanation            = Zur Unterscheidung von Personen mit gleichen Namen, werden, sofern im System hinterlegt, der akademische Grad der Person, sowie der Titel einer wichtigen Publikation (z.B. Doktorarbeit) angezeigt.
 disambiguation.postPanelHeader            = Betreffenden Post
 disambiguation.searchPersonButton         = Nach anderen Namen suchen
 
