--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1199,8 +1199,8 @@ person.new.postPanelHeader             = Ausgew\u00E4hlter Post
 person.new.subHeader                   = f\u00FCr Publikation
 person.show.B1st                       = Erstgutachter
 person.show.B1stTooltip                = Erster Gutachter
-person.show.Bdtv                       = Doktor-Vater
-person.show.BdtvTooltip                = Doktor-Vater
+person.show.Bdtv                       = Doktorvater
+person.show.BdtvTooltip                = Doktorvater
 person.show.Maut                       = Autor
 person.show.MautTooltip                = Autor
 person.show.Moth                       = Andere
