--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -764,6 +764,10 @@ goldStandard.resource.info.pdfps        = Dokumente zu diesem Eintrag
 goldStandard.resource.info.referencedBy = Publikationen, die diesen Eintrag referenzieren
 goldStandard.resource.info.references   = Publikationen, die dieser Eintrag referenziert
 goldStandard.users                      = Benutzer, die diesen Eintrag in ihrer Sammlung haben
+goldStandard.approved.title             = Dieser Eintrag wurde auf bibliothekarische Richtigkeit \u00FCberpr\u00FCft.
+goldStandard.edit.approval              = Pr\u00FCfung des Eintrags
+goldStandard.edit.approveMsg            = Ich best\u00E4tige die bibliothekarische G\u00FCte dieses Eintrags
+goldStandard.edit.approveMsg.help       = Mit der Pr\u00FCfungsfunktion wird die Vollst\u00E4ndigkeit und Korrektheit des Eintrags best\u00E4tigt.
 
 goldstandard.resource.info.noAbstract = Bisher wurden keine Zusammenfassung zu diesem Eintrag hinzugef\u00FCgt.
 goldstandard.resource.info.noLinks    = Bisher wurden keine Links zu diesem Eintrag hinzugef\u00FCgt.
@@ -1327,6 +1331,7 @@ post.resource.address                                   = Adresse
 post.resource.address.help                              = Die Adresse des Verlags oder der Institution
 post.resource.annote                                    = Kommentar
 post.resource.annote.help                               = Ein Kommentar, der von manchen BibTeX-Stilen benutzt wird
+post.resource.approved                                  = Auf Richtigkeit \u00FCberpr\u00FCft
 post.resource.author                                    = Autor(en)
 post.resource.author.help                               = Die Namen der Autoren im Format "Nachname, Vorname" - ein Autor pro Zeile
 post.resource.bibtexAbstract                            = Zusammenfassung
@@ -1758,7 +1763,7 @@ restore = wiederherstellen
 
 save = Speichern
 
-save.and.rate = Speichern &amp; Bewerten
+save.and.rate = Speichern & Bewerten
 
 scraper_info.all_sites                = Eine Liste aller unterst\u00FCtzen Kataloge
 scraper_info.all_sites_header         = Alle unterst\u00FCtzten Seiten
