--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -794,6 +794,7 @@ goldStandard.resource.info.referencedBy = publications that reference this post
 goldStandard.resource.info.references   = publications referenced by this post
 goldStandard.users                      = users having this post in their collection
 goldStandard.approved.title             = This post is marked as approved by an authority.
+goldStandard.approved.revision.title	= This revision is marked as approved by an authority.
 goldStandard.edit.approval              = post approval
 goldStandard.edit.approveMsg            = I approve the high quality of this post
 goldStandard.edit.approveMsg.help       = Approving this post means this post's metadata is complete and correct.
