added missing messages

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -915,17 +915,19 @@ issues = Report Issues
 
 joinGroup = join group
 
-joinGroup.action                = send request
-joinGroup.already.member.error  = You already are a member of this group.
-joinGroup.already.request.error = You have already sent a group join request.
-joinGroup.deny.noUser           = The user you try to deny access does not exist.
-joinGroup.info                  = To join a group you must send a request to the group admin.
-joinGroup.reason                = reason
-joinGroup.reason.hint           = Give a short motivation of why you want to join this group.
-joinGroup.reason.hint.appendix  = ({0} characters)
-joinGroup.request.sent.message  = Your request to join group <a href="/group/{0}">{1}</a> has been sent to the group moderators.
-joinGroup.short                 = join
-joinGroup.spammerError          = Joining this group is not possible.
+joinGroup.action                   = send request
+joinGroup.already.member.error     = You already are a member of this group.
+joinGroup.already.request.error    = You have already sent a group join request.
+joinGroup.deny.noUser              = The user you try to deny access does not exist.
+joinGroup.info                     = To join a group you must send a request to the group admin.
+joinGroup.reason                   = reason
+joinGroup.reason.hint              = Give a short motivation of why you want to join this group.
+joinGroup.reason.hint.appendix     = ({0} characters)
+joinGroup.request.sent.message     = Your request to join group <a href="/group/{0}">{1}</a> has been sent to the group moderators.
+joinGroup.short                    = join
+joinGroup.spammerError             = Joining this group is not possible.
+joinGroup.userSharedDocuments      = Share your documents with the group
+joinGroup.userSharedDocuments.hint = If activated, other group members have access to your documents.
 
 last = &rang;&rang;
 
@@ -1846,11 +1848,16 @@ settings.group.delUser.button                               = remove
 settings.group.delUser.button.title                         = remove this user from the group
 settings.group.delUser.help                                 = enter the name of the user you wish to remove from the group
 settings.group.delUser.noUser                               = The group currently has no members.
+settings.group.delete                                       = delete group
 settings.group.deny                                         = deny join request of user {0}
 settings.group.deny.button                                  = deny
 settings.group.denyReason                                   = reason
 settings.group.denyReason.help                              = the reason why the user is not allowed to join
 settings.group.description                                  = description
+settings.group.disband                                      = disband group
+settings.group.disband.InfoText                             = TODO: some kind of information what happens when a group will be deleted
+settings.group.disband.notEmptyInfoText                     = This group can only be disbanded, if you remove all other group members.
+settings.group.disband.yesToDeleteGroup                     = (type {0} to delete this group)
 settings.group.editSettings                                 = edit settings
 settings.group.error.addUserToGroupFailed                   = The user {0} could not be added to the group {1}.
 settings.group.error.groupDoesNotExist                      = The group, of which you wanted to change the settings, does not exist.
