--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -875,17 +875,19 @@ issues = Probleme melden
 
 joinGroup = Gruppe beitreten
 
-joinGroup.action                = Anfrage senden
-joinGroup.already.member.error  = Sie sind bereits ein Mitglied dieser Gruppe.
-joinGroup.already.request.error = Sie haben bereits einen Gruppen-Mitgliedsschaftanfrage gesendet. 
-joinGroup.deny.noUser           = Der Benutzer, dem Sie die Mitgliedschaft verwehren wollen existiert nicht.
-joinGroup.info                  = Um einer Gruppe beizutreten, m\u00FCssen Sie eine Anfrage an den Gruppenadministrator senden.
-joinGroup.reason                = Begr\u00FCndung
-joinGroup.reason.hint           = Bitte begr\u00FCnden Sie, warum Sie der Gruppe beitreten m\u00F6chten.
-joinGroup.reason.hint.appendix  = ({0} Zeichen)
-joinGroup.request.sent.message  = Ihre Anfrage der Gruppe <a href="/group/{0}">{1}</a> beizutreten wurde an die Moderatoren der Gruppe gesendet.
-joinGroup.short                 = beitreten
-joinGroup.spammerError          = Sie k\u00F6nnen dieser Gruppe nicht beitreten.
+joinGroup.action                   = Anfrage senden
+joinGroup.already.member.error     = Sie sind bereits ein Mitglied dieser Gruppe.
+joinGroup.already.request.error    = Sie haben bereits einen Gruppen-Mitgliedsschaftanfrage gesendet. 
+joinGroup.deny.noUser              = Der Benutzer, dem Sie die Mitgliedschaft verwehren wollen existiert nicht.
+joinGroup.info                     = Um einer Gruppe beizutreten, m\u00FCssen Sie eine Anfrage an den Gruppenadministrator senden.
+joinGroup.reason                   = Begr\u00FCndung
+joinGroup.reason.hint              = Bitte begr\u00FCnden Sie, warum Sie der Gruppe beitreten m\u00F6chten.
+joinGroup.reason.hint.appendix     = ({0} Zeichen)
+joinGroup.request.sent.message     = Ihre Anfrage der Gruppe <a href="/group/{0}">{1}</a> beizutreten wurde an die Moderatoren der Gruppe gesendet.
+joinGroup.short                    = beitreten
+joinGroup.spammerError             = Sie k\u00F6nnen dieser Gruppe nicht beitreten.
+joinGroup.userSharedDocuments      = Ihre Dokumente mit dieser Gruppe teilen
+joinGroup.userSharedDocuments.hint = Bei aktivierter Freigabe haben andere Gruppenmitglieder Zugriff auf Ihre Dokumente.
 
 last = &rang;&rang;
 
@@ -1837,10 +1839,15 @@ settings.group.delUser.button                               = Ausschlie\u00DFen
 settings.group.delUser.button.title                         = Diesen Benutzer aus der Gruppe ausschlie\u00DFen
 settings.group.delUser.help                                 = Der Name des Benutzers, der aus der Gruppe ausgeschlossen werden soll
 settings.group.delUser.noUser                               = Die Gruppe hat derzeit noch keine Mitglieder.
+settings.group.delete                                       = Gruppe l\u00F6schen
 settings.group.deny                                         = Mitgliedschaftsantrag des Benutzers {0} ablehnen
 settings.group.deny.button                                  = Antrag ablehnen
 settings.group.denyReason                                   = Grund
 settings.group.denyReason.help                              = Der Grund, weshalb der Benutzer nicht der Gruppe beitreten darf
+settings.group.disband                                      = Gruppe aufl\u00F6sen
+settings.group.disband.InfoText                             = TODO: Folgen des L\u00F6schens der Gruppe
+settings.group.disband.notEmptyInfoText                     = Sie k\u00F6nnen diese Gruppe erst l\u00F6schen, wenn Sie vorher alle anderen Mitglieder aus der Gruppe entfernen.
+settings.group.disband.yesToDeleteGroup                     = (Geben Sie {0} ein, um diese Gruppe zu l\u00F6schen)
 settings.group.error.addUserToGroupFailed                   = Der Benutzer {0} konnte nicht zur Gruppe hinzugef\u00FCgt {1} werden.
 settings.group.error.alreadyInvited                         = Dieser Benutzer wurde bereits in die Gruppe eingeladen.
 settings.group.error.changeGroupRoleFailed                  = Die Gruppenrolle des Benutzers {0} konnte nicht bearbeitet werden.
