--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -512,7 +512,7 @@ error.document_invalid_symbols               = Filename must not contain &lt;,/,
 error.document_not_converted                 = Sorry, the QR-Code could not be embedded into the requested document.
 error.document_not_found                     = Sorry, the requested document could not be found.
 error.duplicate.post                         = You already have a post with this hash.
-error.field.duplicate.group.name             = This group already exists. Please choose another name.
+error.field.duplicate.group.name             = There already exists a group or a user with that name. Please choose another name.
 error.field.duplicate.oauth.consumerKey      = This consumer-key already exists. Please choose another key.
 error.field.duplicate.user.name              = This user name already exists. Please choose another name.
 error.field.duplicate.user.openid            = This OpenID already exists.
