--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -483,7 +483,7 @@ error.document_invalid_symbols               = Der Dateiname darf keines der fol
 error.document_not_converted                 = Der QR-Code konnte nicht in das angefordete Dokument eingebettet werden.
 error.document_not_found                     = Das angefragte Dokument konnte leider nicht gefunden werden.
 error.duplicate.post                         = Sie haben bereits einen Eintrag mit diesem Hash.
-error.field.duplicate.group.name             = Diese Gruppe existiert bereits. Bitte w\u00E4hlen Sie einen anderen Namen.
+error.field.duplicate.group.name             = Es existiert bereits eine Gruppe oder ein Benutzer mit diesem Namen. Bitte w\u00E4hlen Sie einen anderen Namen.
 error.field.duplicate.oauth.consumerKey      = Dieser Consumer-Schl\u00FCssel existiert bereits. Bitte w\u00E4hlen Sie einen anderen Schl\u00FCssel.
 error.field.duplicate.user.name              = Dieser Benutzername existiert bereits. Bitte w\u00E4hlen Sie einen anderen Namen.
 error.field.duplicate.user.openid            = Diese OpenID ist bereits registriert.
