--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1267,6 +1267,7 @@ post.actions.edit.tags.myTags                           = myTags
 post.actions.edit.tags.recommended                      = recommended
 post.actions.edit.tags.title                            = edit the tags of this post
 post.actions.edit.title                                 = edit this post
+post.actions.reportSpammer								= report user as spammer
 post.bibtex.addedFiles                                  = added files
 post.bibtex.btnRename                                   = Rename
 post.bibtex.changeFiletype                              = Do you really want to edit the file's format?
@@ -2219,6 +2220,8 @@ user.place                            = place
 user.profession                       = profession
 user.realname                         = real name
 user.realname.help                    = Insert your real name.
+user.report							  = report user as spammer
+user.reported						  = reported
 user.settings.birthday                = birthday
 user.settings.email                   = email
 user.settings.homepage                = homepage
