added missing messages

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1841,6 +1841,8 @@ settings.group                                              = group
 settings.group.accInvite.button                             = accept
 settings.group.accInvite.button.title                       = accept the group invite
 settings.group.accUser                                      = accept join request of user {0}
+settings.group.accUser.button                               = accept
+settings.group.accUser.button.title                         = accept join request of user
 settings.group.addUser.button                               = add user
 settings.group.addUser.help                                 = the user's name that is to be added
 settings.group.delUser                                      = remove user
@@ -1851,6 +1853,7 @@ settings.group.delUser.noUser                               = The group currentl
 settings.group.delete                                       = delete group
 settings.group.deny                                         = deny join request of user {0}
 settings.group.deny.button                                  = deny
+settings.group.deny.button.title                            = deny join request of user
 settings.group.denyReason                                   = reason
 settings.group.denyReason.help                              = the reason why the user is not allowed to join
 settings.group.description                                  = description
