--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1842,6 +1842,7 @@ settings.group.delUser.noUser                               = Die Gruppe hat der
 settings.group.delete                                       = Gruppe l\u00F6schen
 settings.group.deny                                         = Mitgliedschaftsantrag des Benutzers {0} ablehnen
 settings.group.deny.button                                  = Antrag ablehnen
+settings.group.deny.button.title                            = Antrag ablehnen
 settings.group.denyReason                                   = Grund
 settings.group.denyReason.help                              = Der Grund, weshalb der Benutzer nicht der Gruppe beitreten darf
 settings.group.disband                                      = Gruppe aufl\u00F6sen
