--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -787,17 +787,17 @@ gettingStarted.navi.overview         = overview
 
 goldStandard = community post
 
+goldStandard.approved.revision.title    = This revision is marked as approved by an authority.
+goldStandard.approved.title             = This post is marked as approved by an authority.
+goldStandard.edit.approval              = post approval
+goldStandard.edit.approveMsg            = I approve the high quality of this post
+goldStandard.edit.approveMsg.help       = Approving this post means this post's metadata is complete and correct.
 goldStandard.resource.info.citations    = citations
 goldStandard.resource.info.links        = links to this post
 goldStandard.resource.info.pdfps        = documents attached to this post
 goldStandard.resource.info.referencedBy = publications that reference this post
 goldStandard.resource.info.references   = publications referenced by this post
 goldStandard.users                      = users having this post in their collection
-goldStandard.approved.title             = This post is marked as approved by an authority.
-goldStandard.approved.revision.title	= This revision is marked as approved by an authority.
-goldStandard.edit.approval              = post approval
-goldStandard.edit.approveMsg            = I approve the high quality of this post
-goldStandard.edit.approveMsg.help       = Approving this post means this post's metadata is complete and correct.
 
 goldstandard.resource.info.noAbstract = No abstract has been added to this post.
 goldstandard.resource.info.noLinks    = No links have been added to this post.
@@ -818,7 +818,7 @@ group.cv.publications                                    = Recently added public
 group.cv.title                                           = CV of {0} group
 group.description.help                                   = a short description of the group
 group.doesnotexist.header                                = group does not exist
-group.groupRequest.description                           = Here you can request a new group. Please enter the desired name of the group and justify your request. We will inform you as soon as a system administrator approved your group.
+group.groupRequest.description                           = Here you can request a new group. Please enter the desired name of the group and the main purpose of the group you request. We will inform you as soon as a system administrator approved your group.
 group.groupRequest.reason                                = reason for request
 group.groupRequest.reason.help                           = the reason why you need the group
 group.groupRequest.userName                              = username
@@ -948,6 +948,7 @@ list.entriesPerPage      = per page
 list.expand.bookmarks    = expand bookmarks
 list.expand.both         = show bookmarks and publications
 list.expand.publications = expand publications
+list.hide                = hide
 list.less                = hide entries
 list.more                = show more entries
 # list information
@@ -1165,12 +1166,12 @@ navi.relations.cap               = Concepts
 navi.relevantFor                 = relevant for
 navi.reporting                   = reporting
 navi.search                      = search
-navi.sharedResourceSearch        = Shared Resource Search
 navi.search.cap                  = Search
 navi.search.hint                 = fulltext search
 navi.search.in_group             = in group
 navi.settings                    = settings
 navi.settings.inactive           = Sign in for updating your user settings.
+navi.sharedResourceSearch        = Shared Resource Search
 navi.sidebar.toggle              = Collapse/Open Sidebar
 navi.spam                        = spam
 navi.spammertags                 = spammertags
