fixed some messages in footer

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -721,15 +721,19 @@ footer.buttons        = Browser Buttons
 footer.cookies        = <a href="/help_en/Cookies">Cookies</a>
 footer.developer      = Developer
 footer.gettingStarted = Getting Started
+footer.google         = Google+ Community
 footer.integration    = Integration
 footer.links          = Useful Links
+footer.mailingList    = Mailing List
 footer.overview       = Overview
 footer.privacyContact = Contact & Privacy
 footer.quickstart     = <a href="/help_en/User%20Interface">Getting Started</a>
 footer.scraperInfo    = Supported Sites
+footer.socialMedia    = Social Media
 footer.team           = Team
 footer.twitter        = Follow us on Twitter
 footer.what           = What is {0}?
+footer.wiki           = {0} Wiki
 
 for = for
 
