--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -83,14 +83,15 @@ basket.removeAllVerbose = remove all publications from the clipboard
 batchedit.AllpostTagsHeader        = The following tag(s) will be added <br/> to all the selected posts
 batchedit.EditAllTag               = Add tags to all the selected posts
 batchedit.EditEachTag              = Edit each posts' tags separately
-batchedit.Selection.addToAll       = Add a tag (s) to all posts
+batchedit.Selection.addToAll       = Add a tag(s) to all posts
 batchedit.Selection.addToEach      = Update tag (s) of each post
+batchedit.addTags                  = add tags
 batchedit.allTagOk                 = Add tag(s)
-batchedit.alreadyInCollectionError = This post is already stored in Database!
-batchedit.alreadyInSnippetError    = This post is added more than one time to the snippet!
+batchedit.alreadyInCollectionError = This post is already stored in your collection!
+batchedit.alreadyInSnippetError    = This post is contained more than once in the snippet!
 batchedit.button.update            = update
 batchedit.cancelbtn                = Cancel
-batchedit.checkboxNormalize        = Normalize BibTex Key
+batchedit.checkboxNormalize        = Normalize BibTeX key
 # batchedit page(s)
 batchedit.deleteAlert              = Warning: You are about to delete the selected posts!
 batchedit.deleteSelected           = Delete post(s)
