--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -27,12 +27,24 @@ admin.actions.general              = Allgemeine Aktionen
 admin.actions.group                = Gruppe hinzuf\u00FCgen
 admin.actions.group.accept         = akzeptieren
 admin.actions.group.decline        = ablehnen
+admin.actions.oauth                = OAuth Consumer bearbeiten
 admin.actions.scraper              = Scraper Infos
 admin.actions.user                 = Benutzer Infos
 admin.group.pending                = Gruppenantr\u00E4ge
-admin.oauth.consumer.details       = 
+admin.oauth.consumer.callbackUrl   = Callback URL
+admin.oauth.consumer.description   = Beschreibung
+admin.oauth.consumer.details       = Consumer Details
 admin.oauth.consumer.ensure_delete = Sind Sie sicher, dass sie diesen Consumer l\u00F6schen m\u00F6chten?\n
+admin.oauth.consumer.gadgetUrl     = Gadget URL
+admin.oauth.consumer.icon          = Bild
+admin.oauth.consumer.key           = Consumer Schl\u00FCssel
 admin.oauth.consumer.keyName       = Key Name
+admin.oauth.consumer.keyType       = Schl\u00FCssel Typ
+admin.oauth.consumer.secret        = Consumer Secret
+admin.oauth.consumer.serviceName   = Service Name
+admin.oauth.consumer.summary       = Zusammenfassung
+admin.oauth.consumer.thumbnail     = Thumbnail
+admin.oauth.consumer.title         = Titel
 admin.recommender.active.item      = Aktive Item Recommender
 admin.recommender.active.tag       = Aktive Tag Recommender
 admin.recommender.add.item         = Item Recommender-URL hinzuf\u00FCgen
@@ -70,34 +82,42 @@ basket.removeAllVerbose = Alle Publikationen aus der Ablage entfernen
 
 batchedit = 
 
-batchedit.AllpostTagsHeader      = Diese Tags werden zu 
-batchedit.EditAllTag             = Tags zu allen ausgew\u00E4hlten Posts hinzuf\u00FCgen
-batchedit.EditEachTag            = Die Tags aller ausgew\u00E4hlten Eintr\u00E4ge separat bearbeiten
-batchedit.addTags                = Tags hinzuf\u00FCgen
-batchedit.button.update          = Absenden
-batchedit.deleteAlert            = Warnung: Sie l\u00F6schen alle ausgew\u00E4hlten Eintr\u00E4ge!
-batchedit.deleteSelected         = Eintr\u00E4ge l\u00F6schen
-batchedit.deleteSelected.confirm = Wollen Sie wirklich alle ausgew\u00E4hlten Eintr\u00E4ge l\u00F6schen?
-batchedit.disregardedPosts       = Ignorierte Eintr\u00E4ge
-batchedit.disregardedPosts.alert = Die inaktiven Eintr\u00E4ge sind nicht aus Ihrer Sammlung und k\u00F6nnen daher nicht von Ihnen bearbeitet oder gel\u00F6scht werden.
-batchedit.disregardedPosts.info  = Da die folgenden Eintr\u00E4ge nicht Ihnen geh\u00F6ren, k\u00F6nnen Sie diese nicht bearbeiten.
-batchedit.ignoreSelected         = Eintr\u00E4ge ignorieren
-batchedit.ignoreSelected.confirm = Sollen wirklich alle ausgew\u00E4hlten Eintr\u00E4ge ignoriert werden?
+batchedit.AllpostTagsHeader        = Diese Tags werden zu 
+batchedit.EditAllTag               = Tags zu allen ausgew\u00E4hlten Posts hinzuf\u00FCgen
+batchedit.EditEachTag              = Die Tags aller ausgew\u00E4hlten Eintr\u00E4ge separat bearbeiten
+batchedit.Selection.addToAll       = Tag(s) zu allen Eintr\u00E4gen hinzuf\u00FCgen
+batchedit.Selection.addToEach      = Tag(s) pro Eintrag bearbeiten
+batchedit.addTags                  = Tags hinzuf\u00FCgen
+batchedit.allTagOk                 = Tag(s) hinzuf\u00FCgen
+batchedit.alreadyInCollectionError = Dieser Eintrag ist bereits in Ihrer Sammlung
+batchedit.alreadyInSnippetError    = Dieser Eintrag ist mehrfach im Snippet!
+batchedit.button.update            = Absenden
+batchedit.cancelbtn                = Abbrechen
+batchedit.checkboxNormalize        = BibTeX-Schl\u00FCssel normalisieren
+batchedit.deleteAlert              = Warnung: Sie l\u00F6schen alle ausgew\u00E4hlten Eintr\u00E4ge!
+batchedit.deleteSelected           = Eintr\u00E4ge l\u00F6schen
+batchedit.disregardedPosts         = Ignorierte Eintr\u00E4ge
+batchedit.disregardedPosts.alert   = Die inaktiven Eintr\u00E4ge sind nicht aus Ihrer Sammlung und k\u00F6nnen daher nicht von Ihnen bearbeitet oder gel\u00F6scht werden.
+batchedit.disregardedPosts.info    = Da die folgenden Eintr\u00E4ge nicht Ihnen geh\u00F6ren, k\u00F6nnen Sie diese nicht bearbeiten.
+batchedit.eachTagOk                = Tag(s) bearbeiten
+batchedit.editHint                 = Bitte w\u00E4hlen Sie mindestens einen Eintrag aus, bevor Sie eine Option zur bearbeitung angeben.
+batchedit.hint.notSavedEdit        = Die folgenden (fehlerfreien) Eintr\u00E4ge werden erst gespeichert, wenn Sie die Bearbeitung abgeschlossen haben.
+batchedit.hint.savedEdit           = Die folgenden (fehlerfreien) Eintr\u00E4ge sind gespeichert und k\u00F6nnen nun bearbeitet werden.
 # batchedit Seite(n)
-batchedit.info                   = Hier k\u00F6nnen Sie Ihre Eintr\u00E4ge bearbeiten
-batchedit.normalizeAlert         = \ Info: Sie normalisieren die BibTeX Schl\u00FCssel aller gew\u00E4hlten Eintr\u00E4ge! BibTex Schl\u00FCssel werden nach dem Schema <tt>NameJahrTitel</tt> normalisiert, wobei <tt>Name</tt> der Nachname des prim\u00E4ren Authors , <tt>Jahr</tt> das Jahr der Ver\u00F6ffentlichung und <tt>Titel</tt> das erste Wort des Titels der Publikation ist, das mehr als f\u00FCnf Buchstaben enth\u00E4lt. Beispiel: <tt>knuth1998programming</tt>.
-batchedit.normalizeSelected      = BibTeX-Schl\u00FCssel normalisieren
-batchedit.selectAll              = Alles ausw\u00E4hlen
-batchedit.selectedTags           = Diese Tags den ausgew\u00E4hlten Eintr\u00E4gen hinzuf\u00FCgen.
-batchedit.selection              = Auswahl
-batchedit.selection.help         = W\u00E4hlen Sie eine Option zum Bearbeiten der Eintr\u00E4ge.
-batchedit.selection.initial      = Bitte Aktion ausw\u00E4hlen...
-batchedit.title                  = Batch edit
-batchedit.updatePrivacy          = Sichtbarkeit einstellen
-batchedit.updateSelected         = Tags aktualisieren
-batchedit.viewable               = Sichtbarkeit setzen
-batchedit.yourPosts              = Ihre Eintr\u00E4ge
-batchedit.yourTags               = Ihre Tags
+batchedit.info                     = Hier k\u00F6nnen Sie Ihre Eintr\u00E4ge bearbeiten
+batchedit.normalizeAlert           = \ Info: Sie normalisieren die BibTeX Schl\u00FCssel aller gew\u00E4hlten Eintr\u00E4ge! BibTex Schl\u00FCssel werden nach dem Schema <tt>NameJahrTitel</tt> normalisiert, wobei <tt>Name</tt> der Nachname des prim\u00E4ren Authors , <tt>Jahr</tt> das Jahr der Ver\u00F6ffentlichung und <tt>Titel</tt> das erste Wort des Titels der Publikation ist, das mehr als f\u00FCnf Buchstaben enth\u00E4lt. Beispiel: <tt>knuth1998programming</tt>.
+batchedit.normalizeSelected        = BibTeX-Schl\u00FCssel normalisieren
+batchedit.selectAll                = Alles ausw\u00E4hlen
+batchedit.selectedTags             = Diese Tags den ausgew\u00E4hlten Eintr\u00E4gen hinzuf\u00FCgen.
+batchedit.selection                = Auswahl
+batchedit.selection.help           = W\u00E4hlen Sie eine Option zum Bearbeiten der Eintr\u00E4ge.
+batchedit.selection.initial        = Bitte Aktion ausw\u00E4hlen...
+batchedit.title                    = Batch edit
+batchedit.updatePrivacy            = Sichtbarkeit einstellen
+batchedit.updateSelected           = Tags aktualisieren
+batchedit.viewable                 = Sichtbarkeit setzen
+batchedit.yourPosts                = Ihre Eintr\u00E4ge
+batchedit.yourTags                 = Ihre Tags
 
 bibtex.abstract                              = Zusammenfassung
 bibtex.abstract.cap                          = Zusammenfassung
