--- a/bibsonomy-webapp/src/main/resources/messages_ru.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_ru.properties
@@ -1206,3 +1206,5 @@ users.similar.your = \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u043
 yes = \u0434\u0430
 
 younger = \u043D\u043E\u0432\u044B\u0435
+footer.socialMedia=
+footer.team=\u041A\u043E\u043C\u0430\u043D\u0434\u0430
