--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -108,7 +108,7 @@ batchedit.noPost.message           = There is no post to edit!
 batchedit.normalizeAlert           = Info: You are about to normalize BibTex key of the selected posts! The BibTex key of a post is normalized to the pattern <tt>nameYearTitle</tt>, where <tt>name</tt> is the last name of the first author, <tt>year</tt> is the publication year, and <tt>title</tt> is the first word of the title that has at least five letters, e.g. <tt>knuth1998programming</tt>.
 batchedit.normalizeSelected        = Normalize BibTex Key
 batchedit.notYours                 = The following posts do not belong to your collection. You can only edit your own posts.
-batchedit.option1                  = Normalizing BibTex key
+batchedit.option1                  = Normalizing BibTeX key
 batchedit.option2                  = Changing privacy 
 batchedit.option3                  = Deleting post(s)
 batchedit.option4                  = Editing tags of each post
