--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -103,10 +103,17 @@ batchedit.eachTagOk                = Tag(s) bearbeiten
 batchedit.editHint                 = Bitte w\u00E4hlen Sie mindestens einen Eintrag aus, bevor Sie eine Option zur bearbeitung angeben.
 batchedit.hint.notSavedEdit        = Die folgenden (fehlerfreien) Eintr\u00E4ge werden erst gespeichert, wenn Sie die Bearbeitung abgeschlossen haben.
 batchedit.hint.savedEdit           = Die folgenden (fehlerfreien) Eintr\u00E4ge sind gespeichert und k\u00F6nnen nun bearbeitet werden.
-# batchedit Seite(n)
-batchedit.info                     = Hier k\u00F6nnen Sie Ihre Eintr\u00E4ge bearbeiten
+batchedit.info1                    = Bearbeiten Sie Ihre Eintr\u00E4ge. Sie k\u00F6nnen:
+batchedit.info2                    = Um Eintr\u00E4ge zu bearbeiten, w\u00E4hlen Sie diese zun\u00E4chst aus und geben dann die gew\u00FCnschte Aktion an.
+batchedit.noPost.message           = Es gibt keine Eintr\u00E4ge die bearbeitet werden k\u00F6nnten.
 batchedit.normalizeAlert           = \ Info: Sie normalisieren die BibTeX Schl\u00FCssel aller gew\u00E4hlten Eintr\u00E4ge! BibTex Schl\u00FCssel werden nach dem Schema <tt>NameJahrTitel</tt> normalisiert, wobei <tt>Name</tt> der Nachname des prim\u00E4ren Authors , <tt>Jahr</tt> das Jahr der Ver\u00F6ffentlichung und <tt>Titel</tt> das erste Wort des Titels der Publikation ist, das mehr als f\u00FCnf Buchstaben enth\u00E4lt. Beispiel: <tt>knuth1998programming</tt>.
 batchedit.normalizeSelected        = BibTeX-Schl\u00FCssel normalisieren
+batchedit.notYours                 = Die folgenden Eintr\u00E4ge entstammen nicht Ihrer Sammlung. Nur eigene Eintr\u00E4ge k\u00F6nnen bearbeitet werden.
+batchedit.option1                  = BibTeX-Schl\u00FCssel normalisieren
+batchedit.option2                  = Sichtbarkeit \u00E4ndern
+batchedit.option3                  = Eintr\u00E4ge l\u00F6schen
+batchedit.option4                  = Tag(s) aller Eintr\u00E4ge bearbeiten
+batchedit.option5                  = Tag(s) einzelner Eintr\u00E4ge einzeln bearbeiten
 batchedit.selectAll                = Alles ausw\u00E4hlen
 batchedit.selectedTags             = Diese Tags den ausgew\u00E4hlten Eintr\u00E4gen hinzuf\u00FCgen.
 batchedit.selection                = Auswahl
